
# 将源代码添加到此项目的可执行文件。
add_executable (learn_POD_type "POD_type.cpp")
add_executable (learn_std "std.cpp")
add_executable (learn_array "array.cpp")
add_executable (learn_std_variant "std_variant.cpp")
add_executable (learn_shared_ptr "shared_ptr.cpp")
add_executable (learn_unique_ptr "unique_ptr.cpp")
add_executable (learn_weak_ptr "weak_ptr.cpp")
add_executable (learn_nrvo "nrvo.cpp")
